--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         "url": "https://raw.githubusercontent.com/ngkaiyi00/FIT3179/main/ne_110m.json",
         "format": {"type": "topojson", "feature": "ne_110m_graticules_30"}
       },
-      "mark": {"type": "geoshape", "fill": "null", "stroke": "lightgray"}
+      "mark": {"type": "geoshape", "fill": "", "stroke": "lightgray"}
     },
     {
       "data": {
