--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <script type="text/javascript">
     var specVis1 = "./js/map.vg.json";
     var specVis2 = "./js/donut.vg.json";
-    var specVis3 = "./js/map.vg.json";
+    var specVis3 = "./js/bubble.vg.json";
     var specVis4 = "./js/line.vg.json";
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
