--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="pure-g">
       <div class="pure-u-1-3">
         <div class="description description-left">
-          <h2>Donut Chart</h2>
+          <h2>Donut Chart and Line Chart</h2>
         </div>
       </div>
       <div class="pure-u-1-3">
@@ -94,9 +94,9 @@
 
   <script type="text/javascript">
     var specVis1 = "./js/map.vg.json";
-    var specVis2 = "./js/donut.vg.json";
+    var specVis2 = "./js/bubble.vg.json";
     var specVis3 = "./js/line.vg.json";
-    var specVis4 = "./js/bubble.vg.json";
+    var specVis4 = "./js/donut.vg.json";
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
 
