--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
+    <div class="pure-g">
       <div class="pure-u-1-3">
         <div class="description description-left">
           <h2>How Does the Total Cases Affect the Total Deaths?</h2>
@@ -128,7 +129,7 @@
     var specVis1 = "./js/map.vg.json";
     var specVis2 = "./js/waffle.vg.json";
     var specVis3 = "./js/bubble.vg.json";
-    var specVis4 = "./js/bump.vg.json";
+    var specVis4 = "./js/bumpchart.vg.json";
     var specVis5 = "./js/line.vg.json";
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
