--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div class="pure-u-1">
-        <div id="vis1" class="vis-container"></div>
+        <div id="vis1" class="vis-container" style="display: table; margin: 0 auto;"></div>
       </div>
     </div>
     <!-- end pure grid group -->
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="pure-u-1">
-        <div id="vis2" class="vis-container"></div>
+        <div id="vis2" class="vis-container" style="display: table; margin: 0 auto;"></div>
       </div>
     </div>
     <!-- end pure grid group -->
@@ -117,7 +117,7 @@
         </div>
       </div>
       <div class="pure-u-1">
-        <div id="vis5" class="vis-container"></div>
+        <div id="vis5" class="vis-container" style="display: table; margin: 0 auto;"></div>
       </div>
     </div>
     <!-- end pure grid group -->
