--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <!-- pure grid group -->
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h2>COVID-19 Cases by Country</h2>
-                <p>The first column contains text and the second column contains a visualisation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+                <h2 style="text-align:center">COVID-19 Cases by Country</h2>
+                <p style="text-align:center">The first column contains text and the second column contains a visualisation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
             </div>
             <div class="pure-u-1">
-                <div id="vis1" class="vis-container" style="display: table; margin: 0 auto;"></div>
+                <div id="vis1" align="center" class="vis-container" style="display: table; margin: 0 auto;"></div>
             </div>
         </div>
         <p></p>
@@ -53,12 +53,12 @@
         <!-- pure grid group -->
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h2>Percentage of COVID-19 Cases by Continent</h2>
-                <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.
+                <h2 style="text-align:center">Percentage of COVID-19 Cases by Continent</h2>
+                <p style="text-align:center">Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.
                 </p>
             </div>
             <div class="pure-u-1">
-                <div id="vis2" class="vis-container" style="display: table; margin: 0 auto;"></div>
+                <div id="vis2" align="center" class="vis-container" style="display: table; margin: 0 auto;"></div>
             </div>
         </div>
         <p></p>
@@ -69,8 +69,8 @@
         <div class="pure-g">
             <div class="pure-u-1-3">
                 <div class="description description-left">
-                    <h2>How Does the Total Cases Affect the Total Deaths?</h2>
-                    <p>The first and second columns are combined. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
+                    <h2 style="text-align:center">How Does the Total Cases Affect the Total Deaths?</h2>
+                    <p style="text-align:center">The first and second columns are combined. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
                 </div>
             </div>
             <div class="pure-u-2-3">
@@ -89,8 +89,8 @@
             </div>
             <div class="pure-u-1-3">
                 <div class="description description-right">
-                    <h2>Ranking of Countries over Time</h2>
-                    <p>The first and second columns are combined. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
+                    <h2 style="text-align:center">Ranking of Countries over Time</h2>
+                    <p style="text-align:center">The first and second columns are combined. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
                 </div>
             </div>
         </div>
@@ -101,12 +101,12 @@
         <!-- pure grid group -->
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h2>Trend of Deaths caused by COVID-19 over Time</h2>
-                <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.
+                <h2 style="text-align:center">Trend of Deaths caused by COVID-19 over Time</h2>
+                <p style="text-align:center">Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.
                 </p>
             </div>
             <div class="pure-u-1">
-                <div id="vis5" class="vis-container" style="display: table; margin: 0 auto;"></div>
+                <div id="vis5" align="center" class="vis-container" style="display: table; margin: 0 auto;"></div>
             </div>
         </div>
         <!-- end pure grid group -->
