--- a/index.html
+++ b/index.html
@@ -86,15 +86,16 @@
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
+
     <div class="pure-g">
+        <div class="pure-u-2-3">
+            <div id="vis4" class="vis-container"></div>
+        </div>
         <div class="pure-u-1-3">
-            <div class="description description-left">
+            <div class="description description-right">
                 <h2 style="text-align:center">Ranking of Countries over Time</h2>
                 <p style="text-align:center">The first and second columns are combined. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
             </div>
-        </div>
-        <div class="pure-u-2-3">
-            <div id="vis4" class="vis-container"></div>
         </div>
     </div>
     <p></p>
