--- a/index.html
+++ b/index.html
@@ -42,15 +42,17 @@
                 <h2 style="text-align:center">COVID-19 Cases by Country</h2>
                 <p style="text-align:center">The first column contains text and the second column contains a visualisation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
             </div>
-            <p></p>
-            <p></p>
-            <div class="pure-u-1">
+        </div>
+        <!-- end pure grid group -->
+
+        <!-- pure grid group -->
+        <div class="pure-g">
+            <div class="pure-u-1-1">
                 <div id="vis1" align="center" class="vis-container" style="display: table; margin: 0 auto;"></div>
             </div>
         </div>
-        <p></p>
-        <p></p>
-        <!-- end pure grid group -->
+    </div>
+    <!-- end pure grid group -->
 
         <!-- pure grid group -->
         <div class="pure-g">
